--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-courses",
   "private": true,
   "scripts": {
-    "start": "turbo start",
+    "start": "cd apps/server && npm start",
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
